[package]
name = "serverlessinterface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
md5 = "0.7.0"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
fuser = "0.7"
clap = "4.5.0"
env_logger = "0.11.2"
tokio = {version = "1.36.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.114"
urlencoding = "2.1.3"
hyper = "1.2.0"
hyperlocal = "0.8"
hyper-tls = "0.6.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]